# chartproof

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py  app.py  config.py  requirements-dev.txt  requirements.txt  schemas.py  vercel_app.py
backend/index/: __init__.py  build.py  chunking.py  retrieve.py
backend/pipeline/: __init__.py  audit_service.py  compose.py  evidence.py  faithfulness.py  graph.py  lexicon.py  qa.py  traces.py  training.py
backend/rules/: __init__.py  engine.py  loader.py
backend/tests/: test_audit_api.py  test_audit_errors.py  test_case_bank.py  test_chunking.py  test_compose_qa.py  test_consistency.py  test_evals.py  test_evidence_negation.py  test_faithfulness.py  test_generate.py  test_guidelines.py  test_health.py  test_pipeline_phase2.py  test_rules.py  test_schemas.py  test_training.py  (+1 more)
data/: __init__.py  consistency.py  generate.py  precompute.py
evals/: __init__.py  metrics.py  run.py  thresholds.yaml
frontend/: package-lock.json  package.json  tailwind.config.ts
project_memory/: CLAUDE.md  DATA_SPEC.md  DEPLOYMENT.md  E2E_REQUIREMENTS_REVIEW.md  FEATURES.md  LOOP_PLAN.md  PHASE_0_1_AUDIT.md  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_1_PROGRESS.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_LOGS.md  PRODUCTION_READINESS_AUDIT.md  PROJECT.md  TASKS.md  TRUST_LOOP_1_COMPLETE.md  TRUST_LOOP_2_COMPLETE.md  TRUST_LOOP_3_COMPLETE.md  TRUST_LOOP_4_COMPLETE.md
scripts/: demo_day_checklist.md
(+316 files in other folders)
